--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="./Resources/styles.css">
+    <link rel="stylesheet" href=".styles.css">
   </head>
 
   <body>
   
     <header>
-      <img src="./Resources/images/REDISEÑO LOGOTIPO.png" alt="logo" class="logo">
+      <img src="./REDISEÑO LOGOTIPO.png" alt="logo" class="logo">
       <div class="menu-container">
         <ul class="menu">
           <li>Acerca</li>
@@ -45,7 +45,7 @@
       <ul class="iniciativas">
         <li>
           <h3>Educación sobre Bitcoin</h3>
-          <img src="./Resources/images/IMG_9622.jpeg" alt="Clase de Bitcoin">
+          <img src="./IMG_9622.jpeg" alt="Clase de Bitcoin">
           <p>Bitcoin Lake a importado más de 40 cursos de bitcoin a diferentes instituciones e individuos alrededor del Lago de Atitlán. 
             <br>
             Más de 200 personas han aprendido sobre bitcoin en el Lago
@@ -53,7 +53,7 @@
         </li>
         <li>
          <h3>Adopción de Bitcoin</h3>
-         <img src="./Resources/images/IMG_6475.jpeg" alt="Comercios">
+         <img src="./IMG_6475.jpeg" alt="Comercios">
          <p>
           El lago de atitlán cuenta con más de 100 comercios que aceptan bitcoin, gracias a las iniciativas de educación y los benefecios de aceptar bitcoin. 
           También puedes vender y comprar bitcoin en el cajero Lightning que está en el Lago de Atitlán. 
@@ -68,12 +68,12 @@
       <ul class="equipo">
         <li>
           <h3>Eliazar</h3>
-          <img src="./Resources/images/Bitcoin Graduation.jpeg" alt="Eliazar">
+          <img src="./Bitcoin Graduation.jpeg" alt="Eliazar">
           <h4>Community Leader</h4>
         </li>
         <li>
           <h3>Rudy Gallardo</h3>
-          <img src="./Resources/images/IMG_0190.jpeg" alt="Rudy">
+          <img src="./IMG_0190.jpeg" alt="Rudy">
           <h4>Voluntario</h4>
         </li>
       </ul>
