--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
   
     <header>
-      <img src="./REDISEÑO LOGOTIPO.png" alt="logo" class="logo">
+      <img src="./LOGOTIPO.png" alt="logo" class="logo">
       <div class="menu-container">
         <ul class="menu">
           <li>Acerca</li>
